src/test/ui/feature-gates/feature-gate-asm.stderr
error[E0658]: use of unstable library feature 'asm': inline assembly is not stable enough for use and is subject to change
  --> $DIR/feature-gate-asm.rs:5:9
   |
LL |         asm!("");
   |         ^^^
   |
   = note: see issue #29722 <https://github.com/rust-lang/rust/issues/29722> for more information
   = help: add `#![feature(asm)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
